add chnages on dashboard and some other files

--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -37,7 +37,7 @@
         <a href="https://geopulsea.com/" class="geopulseaname">@GeoPulse Analytics</a>
         <button class="toggle-button" id="toggleFilters"><i class="fa-solid fa-filter"></i></button>
         <div id="map"></div>
-        <input type="text" name="daterange" id="daterange"   />
+        <input type="text" name="daterange" id="daterange"/>
         <!-- table button -->
         <button id="openTableBtn"><img src="png/dtabasetable.png" alt="" class="tablebtn"></button>
 
@@ -69,7 +69,7 @@
         <!-- table stats -->
 
         <h3>Filters</h3>
-        <div style="height: 100vh; overflow-x: scroll; scrollbar-width: thin;">
+        <div style="height: 80vh; overflow-y: scroll; overflow-x: hidden; scrollbar-width: thin;">
 
           <div class="filter-group">
             <label for="Project_Office" onclick="toggleFilter(this)">Select Office <span class="icon-container"><i class="fa-solid fa-angle-down"></i></span><span class="selected-count"></span></label>
