--- a/ward.html
+++ b/ward.html
@@ -186,18 +186,11 @@
 
     <link rel="stylesheet" href="libs/polyline-measure/line-measure.css" />
     <script src="libs/polyline-measure/line-measure.js"></script>
-    <link
-      rel="stylesheet"
-      href="libs/leaflet-measure-master/leaflet-measure.css"
-    />
+    <link rel="stylesheet" href="libs/leaflet-measure-master/leaflet-measure.css"/>
     <script src="libs/leaflet-measure-master/leaflet-measure.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/leaflet-geometryutil@0.10.3/src/leaflet.geometryutil.min.js"></script>
 
     <script src="libs/feat.js"></script>
-
-    <!-- 
-  <link rel="stylesheet" href="libs/leaflet-wms-legend/leaflet.wmslegend.css" />
-  <script src="libs/leaflet-wms-legend/leaflet.wmslegend.js"></script> -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   </head>
