--- a/drainage.html
+++ b/drainage.html
@@ -151,6 +151,50 @@
     background-position: 1px 2px !important;
 }
     
+#helpButton .icon {
+    font-size: 10px;
+    width: 16px;
+    height: 16px;
+}
+
+#helpButton {
+    position: absolute;
+    top: 15%;
+    left: 1.5%;
+    transform: translateX(-50%);
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 5px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 28px;
+    height: 28px;
+    z-index: 1000;
+    padding: 10px; 
+}
+
+#helpButton:hover::after {
+    content: "HELP"; 
+    position: absolute;
+    top: calc(100% + 5px); 
+    left: 50%; 
+    transform: translateX(-50%);
+    background-color: black;
+    color: white;
+    border: 1px solid black;
+    padding: 5px;
+    border-radius: 5px;
+    font-size: 12px;
+    white-space: nowrap; 
+    z-index: 1000; 
+    display: none; 
+}
+
+#helpButton:hover::after {
+    display: block; 
+}
 
   </style>
   <!-- bootstrap -->
@@ -260,6 +304,11 @@
       <tbody id="workTableData"></tbody>
     </table>
   </div>
+
+  <button id="helpButton" onclick="openHelpPage()">
+    <i class="fas fa-question icon"></i>
+</button>
+
   <script src="js/config.js"></script>
 
   <script src="js/drainage.js"></script>
@@ -985,6 +1034,12 @@ legend.onAdd = function (map) {
 legend.addTo(map);
 
   </script>
+
+<script>
+  function openHelpPage() {
+      window.open('drinage_help.html', '_blank');
+  }
+</script>
 </body>
 
 </html>
