add water layer

--- a/dashboard.html
+++ b/dashboard.html
@@ -19,14 +19,28 @@
     href="https://cdn-geoweb.s3.amazonaws.com/esri-leaflet-geocoder/0.0.1-beta.5/esri-leaflet-geocoder.css" />
   <!-- Include daterangepicker CSS -->
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css"   />
-
-  
-
   <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.css">
-  <style>
-    
-  </style>
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css">
+  <style>
+  .daterange-container {
+    display: flex;
+    align-items: center;
+    position: relative; 
+}
+
+
+.daterange-container .fa-solid  {
+    position: fixed !important;
+    top: 5%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    left: 46.800% !important;
+    z-index: 9999 !important;
+}
+
+  </style>
 </head>
 
 <body>
@@ -38,7 +52,10 @@
         <a href="https://geopulsea.com/" class="geopulseaname">@GeoPulse Analytics</a>
         <button class="toggle-button" id="toggleFilters"><i class="fa-solid fa-filter"></i></button>
         <div id="map"></div>
-        <input type="text" name="daterange" id="daterange"/>
+        <div class="daterange-container">
+          <input type="text" name="daterange" id="daterange" class="form-control">
+          <i id="calendarIcon" class="fa-solid fa-calendar-days"></i>
+      </div>
         <!-- table button -->
         <button id="openTableBtn"><img src="png/dtabasetable.png" alt="" class="tablebtn"></button>
 
@@ -150,7 +167,7 @@
     <script src="js/dashboard.js"></script>
     <script src="js/mainmodal/legend.js"></script>
 
-
+   
 
 </body>
 
