--- a/geometry.html
+++ b/geometry.html
@@ -82,6 +82,24 @@
         .pagination .arrow:focus {
             outline: none;
         }
+        
+        @media print {
+        body {
+            size: tabloid landscape; /* Set page size and orientation */
+            margin: 10mm 10mm 10mm 10mm; /* Adjust margins as needed */
+        }
+
+        .pagination, /* Adjust styles for printing */
+        .geopulseaname,
+        #generatePdfBtn {
+            display: none; /* Hide elements not needed on print */
+        }
+
+        table {
+            width: 100%; /* Ensure table width is 100% */
+            font-size: 10pt; /* Adjust font size for print */
+        }
+    }
     </style>
 
 
@@ -328,12 +346,7 @@
                         });
                         paginationControls.appendChild(button);
                     }
-                    // Count button
-                    // const countButton = document.createElement('button');
-                    // countButton.classList.add('count');
-                    // countButton.textContent = '23';
-                    // countButton.disabled = true;
-                    // paginationControls.appendChild(countButton);
+                 
 
 
                     const nextButton = document.createElement('button');
@@ -393,11 +406,24 @@
                 });
             }
 
-            function printPage() {
-                window.print();
-            }
-        });
+//             document.addEventListener("DOMContentLoaded", function() {
+//             function printPage() {
+//                 window.print();
+//             }
 
+//             document.getElementById("generatePdfBtn").onclick = printPage;
+//         });
+        });
+        $(document).ready(function () {
+        // Your existing document ready code...
+
+        function printPage() {
+            window.print();
+        }
+
+        // Move the onclick assignment inside the document ready block
+        document.getElementById("generatePdfBtn").onclick = printPage;
+    });
     </script>
 </body>
 
