multiple selection in water supply and drainage

--- a/water-suppy.html
+++ b/water-suppy.html
@@ -638,7 +638,7 @@ var url = `https://iwmsgis.pmc.gov.in/geoserver/pmc/wms?SERVICE=WMS&VERSION=1.1.
                   contentType: false,
                   success: function (response) {
                     console.log(response);
-                    //window.location.href = response.data.redirect_Url;
+                    window.location.href = response.data.redirect_Url;
                   },
                   error: function (xhr, status, error) {
                     console.error("Save failed:", error);
