--- a/drainage.html
+++ b/drainage.html
@@ -309,6 +309,8 @@
     <i class="fas fa-question icon"></i>
 </button>
 
+<script src="feedback.js"></script>
+
   <script src="js/config.js"></script>
 
   <script src="js/drainage.js"></script>
