--- a/electric-work.html
+++ b/electric-work.html
@@ -412,6 +412,7 @@
       <i class="fas fa-question icon"></i>
     </button>
 
+    <script src="feedback.js"></script>
     <script src="js/config.js"></script>
 
     <script src="js/electic-work.js"></script>
