--- a/ward.html
+++ b/ward.html
@@ -72,6 +72,51 @@
         background: white;
         border-bottom: 2px solid #2b13bb;
       }
+
+      #helpButton .icon {
+    font-size: 10px;
+    width: 16px;
+    height: 16px;
+}
+
+#helpButton {
+    position: absolute;
+    top: 15%;
+    left: 1.5%;
+    transform: translateX(-50%);
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 5px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 28px;
+    height: 28px;
+    z-index: 1000;
+    padding: 10px; 
+}
+
+#helpButton:hover::after {
+    content: "HELP"; 
+    position: absolute;
+    top: calc(100% + 5px); 
+    left: 50%; 
+    transform: translateX(-50%);
+    background-color: black;
+    color: white;
+    border: 1px solid black;
+    padding: 5px;
+    border-radius: 5px;
+    font-size: 12px;
+    white-space: nowrap; 
+    z-index: 1000; 
+    display: none; 
+}
+
+#helpButton:hover::after {
+    display: block; 
+}
     </style>
 
     <!-- bootstrap -->
@@ -216,6 +261,12 @@
         <tbody id="workTableData"></tbody>
       </table>
     </div>
+
+    <button id="helpButton" onclick="openHelpPage()">
+      <i class="fas fa-question icon"></i>
+  </button>
+
+    <script src="feedback.js"></script>
 
     <script src="js/config.js"></script>
 
@@ -832,5 +883,11 @@
       // Customize the zoom control position
       map.zoomControl.setPosition("bottomright");
     </script>
+
+<script>
+  function openHelpPage() {
+      window.open('Ward_help.html', '_blank');
+  }
+</script>
   </body>
 </html>
