--- a/ward_help.html
+++ b/ward_help.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>project_Help page</title>
+    <title>Ward_help page</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
     <style>
-       body {
+         body {
             font-family: Arial, sans-serif;
             text-align: center;
             margin: 0;
@@ -80,35 +79,30 @@
 </head>
 <body>
 
-    <h1>Project Work</h1>
+    <h1>WARD</h1>
 
     <div id="video-select">
         <label for="videos">Select a video:</label><br><br>
         <select id="videos" onchange="loadVideo()">
-            <option value="video/Project/1. Recording cordinates_1.mp4">Recording coordinates</option>
-            <option value="video/Project/2. Record cordinates_2.mp4">Recording coordinates</option>
-            <option value="video/Project/3. Selection of whole Ward.mp4">Selection of whole Ward </option>
-            <option value="video/Project/4.  Gis mapping.mp4"> Gis mapping</option>
-            <option value="video/Project/5.  Editing.mp4">Editing</option>
-            <option value="video/Project/6. Delete.mp4">Delete</option>
-            <option value="video/Project/7 length restriction.mp4">length restriction</option>
+            <option value="video/Water_Supply/2. Selection of whole Ward.mp4">Selection of whole Ward</option> 
         </select>
     </div>
     <!-- C:\xampp\htdocs\iwms\video\Road\1 Recording coordinates.mp4 -->
     <div id="video-container">
         <video id="videoPlayer" controls>
-            <source src="./video/Project/1. Recording cordinates _1 .mp4" type="video/mp4">
+            <source src="./video/Water_Supply/1. Recording coordinates.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
 
-    <div id="controls"> 
+    <div id="controls">
         <button onclick="previousVideo()"><i class="fas fa-angle-double-left"></i></button>
         <button onclick="nextVideo()"><i class="fas fa-angle-double-right"></i></button>
     </div>
 
     <script>
-        const videos = ["video/Project/1. Recording cordinates_1.mp4","video/Project/2. Record cordinates_2.mp4","video/Project/3. Selection of whole Ward.mp4","video/Project/4.  Gis mapping.mp4","video/Project/5.  Editing.mp4","video/Project/6. Delete.mp4","video/Project/7 length restriction.mp4"];
+               const videos = ["video/Water_Supply/1. Recording coordinates.mp4", "video/Water_Supply/2. Selection of whole Ward.mp4", "video/Water_Supply/3. Water_line mapping.mp4","video/Water_Supply/4. editing line.mp4","video/Water_Supply/5. Deleting a line.mp4"];
+
         let currentVideoIndex = 0;
 
         function loadVideo() {
