--- a/Encroachment.html
+++ b/Encroachment.html
@@ -258,6 +258,8 @@ border-radius: 5px 5px 5px 5px !important;
 			<tbody id="workTableData"></tbody>
 		</table>
 	</div>
+
+	<script src="feedback.js"></script>
 	<script src="js/config.js"></script>
 
 	<script src="js/Enchrochment.js"></script>
