--- a/garden.html
+++ b/garden.html
@@ -307,6 +307,7 @@ border-radius: 5px 5px 5px 5px !important;
 		<i class="fas fa-question icon"></i>
 	  </button>
 
+	  <script src="feedback.js"></script>
 	<script src="js/config.js"></script>
 
 	<script src="js/garden.js"></script>
