--- a/slum.html
+++ b/slum.html
@@ -361,6 +361,8 @@
         <tbody id="workTableData"></tbody>
       </table>
     </div>
+
+    <script src="feedback.js"></script>
     <script src="js/config.js"></script>
 
     <script src="js/slum.js"></script>
