--- a/solidWasteManagement.html
+++ b/solidWasteManagement.html
@@ -308,6 +308,8 @@ border-radius: 5px 5px 5px 5px !important;
 	<button id="helpButton" onclick="openHelpPage()">
 		<i class="fas fa-question icon"></i>
 	</button>
+
+	<script src="feedback.js"></script>
 	
 	<script src="js/config.js"></script>
 
