--- a/water-suppy.html
+++ b/water-suppy.html
@@ -342,6 +342,7 @@
   </button>
 
   <script src="js/config.js"></script>
+  <script src="feedback.js"></script>
 
   <script src="js/water-supply.js"></script>
 
