--- a/ceo.html
+++ b/ceo.html
@@ -41,7 +41,7 @@
         background-color: white;
         color: black;
         padding: 3px 7px;
-        display: none;
+        display: none !important;
         position: fixed;
         top: 690px;
         font-size: 15px;
