--- a/electric-work.html
+++ b/electric-work.html
@@ -22,6 +22,9 @@
       .leaflet-draw-toolbar .leaflet-bar {
         display: none !important;
       }
+      .leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-polygon {
+    background-position: -28px 1px !important;
+}
       .leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-circle {
         background-position: -89px 1px !important;
       }
