--- a/drainage.html
+++ b/drainage.html
@@ -9,9 +9,23 @@
   <link rel="stylesheet" href="css/style.css" />
 
   <style>
+    .leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-polygon {
+    background-position: -28px 1px !important;
+}
+.draw_feature{
+  border:2px solid #2B13BB ; 
+  height:37px;
+   width:37px;
+   position:fixed !important; 
+   top: 687px !important;
+    left:701px !important; 
+    border-radius:5px;
+    background-color:white;
+     padding: 5px ;
+}
  .custom-button {
   width: auto;
-  padding: px 5px;
+  padding: 2px 5px;
   background-color: #fff;
   /* color: darkblue; */
   font-weight: bold;
@@ -19,17 +33,29 @@
   border: 2px solid #2b13bb;
   border-radius: 5px !important;
   cursor: pointer;
-  /* position: absolute; */
+  position: fixed !important;
   top: 678px !important;
-  left: 740px !important;
+  left: 730px !important;
   height: 37px !important;
   width: 37px !important;
   transition: background-color  0.1s;
     }
+    .leaflet-draw-draw-polygon {
+        left: 575px !important;
+        position: absolute !important;
+        top: 528px !important;
+        height: 37px !important;
+        width: 37px !important;
+        border-bottom: 2px solid #2b13bb !important;
+        border-top: 2px solid #2b13bb !important;
+        border-left: 2px solid #2b13bb !important;
+        border-right: 2px solid #2b13bb !important;
+        border-radius: 5px 5px 5px 5px !important;
+      }
 .leaflet-draw-draw-polyline {
-  top: 481px !important;
+  top: 528px !important;
   position: absolute;
-  left: 650px;
+  left: 652px;
   border: 2px solid #2b13bb !important;
   border-bottom: 2px solid darkblue;
   height: 37px !important;
@@ -47,10 +73,10 @@
   border: 2px solid #2b13bb;
   border-top: 2px solid #2b13bb;
   border-bottom: 2px solid #2b13bb;
-  top: 548px;
+  top: 594px !important;
   height: 37px;
   width: 37px;
-  left: 565px;
+  left: 535px;
   font-size: 15px;
   border-bottom: 2px solid #2b13bb;
 }
@@ -63,9 +89,9 @@
   background-color: white;
   color: black;
   cursor: pointer;
-  left: 476px;
+  left: 453px;
   position: absolute;
-  top: 492px !important;
+  top: 538px!important;
   height: 37px;
   width: 37px;
 
@@ -77,11 +103,11 @@
   position: absolute !important;
   height: 37px !important;
   width: 37px !important;
-  top: 505px !important;
+  top: 552px !important;
   border: 2px solid #2b13bb;
   border-radius: 5px 5px 5px 5px !important;
   /* display: none; */
-  left: 520px !important;
+  left: 493px !important;
   border-bottom: 2px solid #2b13bb !important;
 }
 #saveDataButton {
@@ -132,8 +158,8 @@
 }
 .leaflet-draw-draw-circlemarker {
   position: absolute;
-  top: 481px !important;
-  left: 605px;
+  top: 528px !important;
+  left: 613px;
   border-bottom: 2px solid #2B13BB !important;
   border-top: 2px solid #2B13BB !important;
   border-left: 2px solid #2B13BB !important;
