--- a/road.html
+++ b/road.html
@@ -366,7 +366,7 @@
 
   <script src="js/road.js"></script>
   <!-- <script src="js/mainmodal/legend.js"></script> -->
-  <script src="js/mainmodal/contextMenu.js"></script>
+  <!-- <script src="js/mainmodal/contextMenu.js"></script> -->
 
   <script>
 
