--- a/road.html
+++ b/road.html
@@ -8,14 +8,11 @@
   <link rel="icon" href="png/pmcjpeg.png" type="image/x-icon">
   <link rel="stylesheet" href="css/style.css" />
 
+  
+
   <style>
    @media only screen and (min-width: 992px){
-  .leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-polygon {
-      background-position: -27px 2px !important;
-  }
-  .leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-circlemarker {
-      background-position: -269px 2px !important;
-  }
+  
   .leaflet-touch .leaflet-draw-toolbar .leaflet-draw-draw-polyline {
     background-position: 3px 2px !important;
 }
@@ -352,7 +349,7 @@
     left: 1.5%;
     transform: translateX(-50%);
     background-color: white;
-    border: 1px solid black;
+    border: 2px solid darkblue !important;
     border-radius: 5px;
     cursor: pointer;
     display: flex;
