--- a/ceo.html
+++ b/ceo.html
@@ -406,6 +406,7 @@
       <i class="fas fa-question icon"></i>
     </button>
 
+    <script src="feedback.js"></script>
     <script src="js/config.js"></script>
 
     <script src="js/ceo.js"></script>
