--- a/sport.html
+++ b/sport.html
@@ -309,6 +309,8 @@ border-radius: 5px 5px 5px 5px !important;
 		<i class="fas fa-question icon"></i>
 	</button>
 
+	<script src="feedback.js"></script>
+	
 	<script src="js/config.js"></script>
 
 	<script src="js/sport.js"></script>
