add number and ceo functionality

--- a/project.html
+++ b/project.html
@@ -282,7 +282,7 @@
 
   <script src="js/road.js"></script>
   <!-- <script src="js/mainmodal/legend.js"></script> -->
-  <script src="js/mainmodal/contextMenu.js"></script>
+  <!-- <script src="js/mainmodal/contextMenu.js"></script> -->
 
   <script>
 
