--- a/ward.html
+++ b/ward.html
@@ -221,7 +221,7 @@
 
     <script src="js/ward.js"></script>
     <!-- <script src="js/mainmodal/legend.js"></script> -->
-    <script src="js/mainmodal/contextMenu.js"></script>
+    <!-- <script src="js/mainmodal/contextMenu.js"></script> -->
 
     <script>
       function toggleSelectLayerButton(show) {
