--- a/road.html
+++ b/road.html
@@ -9,7 +9,8 @@
   <link rel="stylesheet" href="css/style.css" />
 
   <style>
-    #saveDataButton {
+   
+#saveDataButton {
       border: 2px solid #2b13bb;
       border-bottom: 2px solid #2b13bb;
       border-top: 2px solid #2b13bb;
@@ -37,7 +38,7 @@
       background-color: white;
       color: black;
       cursor: pointer;
-      left: 53%;
+      /* left: 53px; */
       /* changed from 513px */
       position: absolute;
       top: 53%;
@@ -83,10 +84,10 @@
     }
 
     .leaflet-draw-draw-polyline {
-      top: 55%;
+      top:476px;
       /* changed from 478px */
       position: absolute;
-      left: 70%;
+      /* left: 70%; */
       /* changed from 643px */
       border: 2px solid #2b13bb !important;
       border-bottom: 2px solid darkblue;
@@ -116,7 +117,6 @@
       background-size: 360px 36px !important;
       background-clip: padding-box;
     }
-
 
 #helpButton .icon {
     font-size: 10px;
@@ -222,7 +222,6 @@
 #sidebar.open {
     right: 0;
 }
-
 
 
   </style>
@@ -366,7 +365,7 @@
 
   <script src="js/road.js"></script>
   <!-- <script src="js/mainmodal/legend.js"></script> -->
-  <script src="js/mainmodal/contextMenu.js"></script>
+  <!-- <script src="js/mainmodal/contextMenu.js"></script> -->
 
   <script>
 
